--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <!-- First React Code -->
-    <script type="module" src="./App.js">
+    <script type="module" src="./src/App.js">
       
     </script>
   </body>
